# serializer version: 1
# name: TestCLARAClustering.test_clara[event-edit]
  patient_id
  1     4
  2     2
  3     4
  4     0
  5     1
  6     3
  7     4
  8     4
  9     4
  10    4
  Name: __CLARA_CLUSTERS__, dtype: Int32
# ---
# name: TestCLARAClustering.test_clara[event-lcp]
  patient_id
  1     0
  2     0
  3     0
  4     0
  5     0
  6     0
  7     0
  8     0
  9     0
  10    0
  Name: __CLARA_CLUSTERS__, dtype: Int32
# ---
# name: TestCLARAClustering.test_clara[interval-edit]
  patient_id
  1     0
  2     4
  3     0
  4     2
  5     1
  6     3
  7     0
  8     2
  9     0
  10    0
  Name: __CLARA_CLUSTERS__, dtype: Int32
# ---
# name: TestCLARAClustering.test_clara[interval-lcp]
  patient_id
  1     0
  2     0
  3     0
  4     0
  5     0
  6     0
  7     0
  8     0
  9     0
  10    0
  Name: __CLARA_CLUSTERS__, dtype: Int32
# ---
# name: TestCLARAClustering.test_clara[state-edit]
  patient_id
  1     3
  2     0
  3     0
  4     1
  5     0
  6     2
  7     3
  8     4
  9     0
  10    3
  Name: __CLARA_CLUSTERS__, dtype: Int32
# ---
# name: TestCLARAClustering.test_clara[state-lcp]
  patient_id
  1     1
  2     0
  3     0
  4     0
  5     0
  6     0
  7     0
  8     0
  9     0
  10    1
  Name: __CLARA_CLUSTERS__, dtype: Int32
# ---
# name: TestCLARAClustering.test_clara_on_trajectory_pool
  patient_id
  1     0
  2     3
  3     0
  4     2
  5     2
  6     1
  7     2
  8     0
  9     0
  10    0
  Name: __CLARA_CLUSTERS__, dtype: Int32
# ---
